Fixed some minor layout bugs. Try it out.

--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,16 @@
 
 	body {
 		position: relative;
-		top: 140px;
+		top: 100px;
 	}
 
 	#book-editions .books-jumbo {
 		display: block;
 		margin: 0 auto;
+	}
+
+	.nav #get-cp3 {
+		display: none;
 	}
 
 }
@@ -37,7 +41,7 @@ td {
 	title 
 ***/
 body {
-	min-width: 700px;
+	min-width: 750px;
 }
 
 h1, h2, h3, h4, h5, dt {
@@ -48,6 +52,10 @@ h1, h2, h3, h4, h5, dt {
 p, a, li, dd, dl, input, label, form, .btn, .form-control {
 	font-family: 'Merriweather', serif;
 	font-size: 17px;
+}
+
+div {
+	overflow-x: hidden;
 }
 
 #book-editions .title {
@@ -72,10 +80,10 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 	opacity: 0.8;
 }
 
-
 #main-jumbo {
 	margin-bottom: 0px;
 	padding-top: 0px;
+	overflow: visible;
 }
 
 
@@ -101,10 +109,6 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 	/*background-color: rgba(110, 110, 110, 0.9);*/
 	position: fixed;
 	z-index: 2;
-}
-
-#top-link {
-	min-width: 800px;
 }
 
 #top-link a, #top-link a:link {
@@ -139,7 +143,7 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 #book-editions {
 	padding: 10px 0px 0px 0px;
 	width:70%;
-
+	overflow: visible;
 }
 
 #book-editions .books-jumbo {
@@ -170,6 +174,7 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 .book-edition-info .row{
 	margin: 0px;
 }
+
 .book-edition-info .row div {
 	padding-left:50px;
 	padding-right:50px;
@@ -180,6 +185,7 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 #book-editions-img {
 	margin: auto;
 	display: block;
+	overflow: visible;
 }
 
 #book-editions-img a img {
@@ -191,6 +197,7 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 	text-decoration: none;
 	text-align: center;
 	margin-bottom: 10px;
+	z-index: 1;
 }
 
 #book-editions-img a:hover {
@@ -206,6 +213,10 @@ p, a, li, dd, dl, input, label, form, .btn, .form-control {
 .book-edition-content .book-content a {
 	min-height: 44px;
 	display: block;
+}
+
+.col-md-4 {
+	overflow: visible;
 }
 
 .testimonial input {
@@ -314,6 +325,7 @@ td, th {
 	width: 27%;
 	float: right;
 	margin-bottom: 10px;
+	z-index: 1;
 }
 
 #searchErrata a {
@@ -459,6 +471,7 @@ div .backToTop {
 	right: 10px;
   	bottom: 15px;
   	opacity: 0.5;
+  	z-index: 2;
 }
 
 div .backToTop:hover {
